[gd_scene load_steps=21 format=3 uid="uid://bahj28qps5ssw"]

[ext_resource type="Theme" uid="uid://de7fb8k462lxb" path="res://Theme/PopTheme.tres" id="1_ca22g"]
[ext_resource type="Script" uid="uid://bagv52808c2n2" path="res://Scripts/TownShop/town_scene.gd" id="2_epy1b"]
[ext_resource type="Script" uid="uid://ymki3tqy3opd" path="res://Scripts/TownShop/merchandise.gd" id="3_5r13l"]
[ext_resource type="Resource" uid="uid://cgcfrrlvaj7mi" path="res://Resources/Merch/CruiseMissile.tres" id="4_ydye5"]
[ext_resource type="Resource" uid="uid://fgpjo7b6j2lp" path="res://Resources/Merch/TacticalMissile.tres" id="5_11niw"]
[ext_resource type="Resource" uid="uid://kdgwrtlmoo12" path="res://Resources/Merch/APAmmo.tres" id="6_vlkdt"]
[ext_resource type="Resource" uid="uid://b6kalsa6lyfbf" path="res://Resources/Merch/FireExtinguisher.tres" id="7_bygo8"]
[ext_resource type="Resource" uid="uid://byfi8gb5rfaq5" path="res://Resources/Merch/Flares.tres" id="8_quutr"]
[ext_resource type="Resource" uid="uid://csn5s05u6rd82" path="res://Resources/Merch/FireAmmo.tres" id="9_t8y33"]
[ext_resource type="Resource" uid="uid://bjp66pbcmoto5" path="res://Resources/Merch/ProxAmmo.tres" id="10_vs4qv"]
[ext_resource type="Resource" uid="uid://css6e78uhfsfa" path="res://Resources/Items/ShipParts/MG/ShortMachinegun100mm.tres" id="11_cp5cc"]
[ext_resource type="StyleBox" uid="uid://ci3yyoa54a17w" path="res://Theme/YellowPanel.tres" id="15_baphb"]
[ext_resource type="AudioStream" uid="uid://boauqd30g14sd" path="res://Assets/Sounds/UI_in.mp3" id="16_baphb"]
[ext_resource type="PackedScene" uid="uid://dhbyfc1rfad2f" path="res://Scenes/WorkShop/work_shop.tscn" id="17_t244x"]
[ext_resource type="PackedScene" uid="uid://bhpyiqwlbnmad" path="res://Scenes/TownShop/merch_ship.tscn" id="17_vaeb3"]
[ext_resource type="PackedScene" uid="uid://c6pyjquo47hnr" path="res://Scenes/TownShop/fuel_storages.tscn" id="18_u4st4"]
[ext_resource type="Texture2D" uid="uid://bkya84hu7h3c4" path="res://Assets/CaptainPortraits/Captain7.png" id="18_vaeb3"]

[sub_resource type="Resource" id="Resource_box5h"]
script = ExtResource("3_5r13l")
It = ExtResource("11_cp5cc")
Price = 100
Amm = 0
metadata/_custom_type_script = "uid://ymki3tqy3opd"

[sub_resource type="Environment" id="Environment_t244x"]
background_mode = 3
ambient_light_source = 1
reflected_light_source = 1
tonemap_mode = 2
tonemap_white = 16.0
adjustment_enabled = true

[sub_resource type="World3D" id="World3D_oyy4e"]
environment = SubResource("Environment_t244x")

[node name="TownScene" type="Control" node_paths=PackedStringArray("PortName", "PortBuffText", "MerchendiseButton", "WorkshopButton", "FuelButton")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_force_pass_scroll_events = false
theme = ExtResource("1_ca22g")
script = ExtResource("2_epy1b")
Merch = Array[ExtResource("3_5r13l")]([ExtResource("10_vs4qv"), ExtResource("9_t8y33"), ExtResource("6_vlkdt"), ExtResource("4_ydye5"), ExtResource("5_11niw"), ExtResource("7_bygo8"), ExtResource("8_quutr")])
WorkShopMerch = Array[ExtResource("3_5r13l")]([SubResource("Resource_box5h")])
PortName = NodePath("HBoxContainer2/PanelContainer2/HBoxContainer/CityName")
PortBuffText = NodePath("HBoxContainer2/PanelContainer2/HBoxContainer/HBoxContainer/CityBuffs")
MerchendiseButton = NodePath("Button2")
WorkshopButton = NodePath("Button3")
FuelButton = NodePath("Button4")
MerchShopScene = ExtResource("17_vaeb3")
FuelStorageScene = ExtResource("18_u4st4")
WorkshopScene = ExtResource("17_t244x")

[node name="SubViewportContainer" type="SubViewportContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
stretch = true

[node name="SubViewport" type="SubViewport" parent="SubViewportContainer"]
disable_3d = true
world_3d = SubResource("World3D_oyy4e")
handle_input_locally = false
size = Vector2i(1280, 720)
render_target_update_mode = 4

[node name="Button2" type="Button" parent="." groups=["DigitalButtons"]]
layout_mode = 2
offset_left = 462.0
offset_top = 383.0
offset_right = 762.0
offset_bottom = 416.0
size_flags_horizontal = 3
size_flags_vertical = 10
theme = ExtResource("1_ca22g")
theme_override_font_sizes/font_size = 16
text = "MUNITION SHOP"

[node name="Line2D" type="Line2D" parent="Button2"]
show_behind_parent = true
position = Vector2(0, 15)
points = PackedVector2Array(0, 0, 0, 45.15)
width = 2.0
default_color = Color(1, 0.763983, 0.0812772, 1)

[node name="Button3" type="Button" parent="." groups=["DigitalButtons"]]
layout_mode = 2
offset_left = 462.0
offset_top = 431.0
offset_right = 762.0
offset_bottom = 464.0
size_flags_horizontal = 3
size_flags_vertical = 0
theme = ExtResource("1_ca22g")
theme_override_font_sizes/font_size = 16
text = "SHIPYARD"

[node name="Line2D" type="Line2D" parent="Button3"]
show_behind_parent = true
position = Vector2(0, 15)
points = PackedVector2Array(0, 0, 0, 45.15)
width = 2.0
default_color = Color(1, 0.763983, 0.0812772, 1)

[node name="Button4" type="Button" parent="." groups=["DigitalButtons"]]
layout_mode = 2
offset_left = 462.0
offset_top = 479.0
offset_right = 762.0
offset_bottom = 512.0
size_flags_horizontal = 3
size_flags_vertical = 2
theme = ExtResource("1_ca22g")
theme_override_font_sizes/font_size = 16
text = "WORKSHOP"

[node name="Line2D" type="Line2D" parent="Button4"]
show_behind_parent = true
position = Vector2(0, 15)
points = PackedVector2Array(0, 0, 0, 45.15)
width = 2.0
default_color = Color(1, 0.763983, 0.0812772, 1)

[node name="HBoxContainer2" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 9
anchor_bottom = 1.0
offset_left = 28.0
offset_top = 30.0
offset_right = 328.0
offset_bottom = -30.0
grow_vertical = 2
size_flags_vertical = 3
mouse_filter = 2
theme_override_constants/separation = 15
alignment = 1

[node name="PanelContainer2" type="PanelContainer" parent="HBoxContainer2"]
layout_mode = 2
size_flags_vertical = 2
mouse_filter = 2
theme_override_styles/panel = ExtResource("15_baphb")

[node name="HBoxContainer" type="VBoxContainer" parent="HBoxContainer2/PanelContainer2"]
layout_mode = 2
mouse_filter = 2

[node name="CityName" type="Label" parent="HBoxContainer2/PanelContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 50
text = "Alivia City Port"
autowrap_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer2/PanelContainer2/HBoxContainer"]
layout_mode = 2
mouse_filter = 2

[node name="CityBuffs" type="RichTextLabel" parent="HBoxContainer2/PanelContainer2/HBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
mouse_filter = 2
bbcode_enabled = true
fit_content = true

[node name="Button" type="Button" parent="HBoxContainer2" groups=["DigitalButtons"]]
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("1_ca22g")
theme_override_font_sizes/font_size = 16
text = "LEAVE TOWN"

[node name="HBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
mouse_filter = 2
theme_override_constants/separation = 75
alignment = 1

[node name="TownShowWelcomScreen" type="PanelContainer" parent="HBoxContainer"]
visible = false
layout_mode = 2
size_flags_vertical = 3
theme_override_styles/panel = ExtResource("15_baphb")

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/TownShowWelcomScreen"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/TownShowWelcomScreen/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0

[node name="Label" type="Label" parent="HBoxContainer/TownShowWelcomScreen/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "wafwf
fwafw
f
awf
aw
faw
faw"

[node name="PanelContainer" type="PanelContainer" parent="HBoxContainer/TownShowWelcomScreen/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_styles/panel = ExtResource("15_baphb")

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/TownShowWelcomScreen/VBoxContainer/HBoxContainer/PanelContainer"]
custom_minimum_size = Vector2(250, 250)
layout_mode = 2
texture = ExtResource("18_vaeb3")
expand_mode = 1
stretch_mode = 5

[node name="HBoxContainer2" type="HBoxContainer" parent="HBoxContainer/TownShowWelcomScreen/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="Button" type="Button" parent="HBoxContainer/TownShowWelcomScreen/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("16_baphb")
volume_db = -10.0
pitch_scale = 4.0
bus = &"MapSounds"

[connection signal="pressed" from="Button2" to="." method="OnMunitionShopToggled"]
[connection signal="pressed" from="Button3" to="." method="OnRefuelShopPressed"]
[connection signal="pressed" from="Button4" to="." method="OnUpgradeShopPressed"]
[connection signal="pressed" from="HBoxContainer2/Button" to="." method="_on_button_pressed"]
